# PasteImagesAsWebP

./: .gitignore  .gitmodules  README.md  __init__.py  bulkconvert.py  common.py  config.json  config.md  config.py  consts.py  events.py  gui.py  image_conversion.py  libwebp-dl.sh  media_rename.py  menus.py  package.sh  pyproject.toml  webp.py
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: ci.yml  make_release.yml
media_converter/: __init__.py  bulkconvert.py  common.py  config.json  config.md  config.py  consts.py  events.py  gui.py  image_conversion.py  media_rename.py  menus.py
media_converter/bulk_convert/: convert_result.py  convert_task.py  runnable.py
media_converter/dialogs/: bulk_convert_dialog.py  bulk_convert_progress_bar.py  bulk_convert_result_dialog.py  deduplicate_dialog.py  main_settings_dialog.py  paste_image_dialog.py  settings_dialog_base.py
media_converter/file_converters/: __init__.py  audio_converter.py  common.py  convert_result.py  file_converter.py  find_media.py  image_converter.py  internal_file_converter.py  on_add_note_converter.py  on_paste_converter.py
media_converter/image_converters/: common.py  image_converter.py  internal_file_converter.py  on_add_note_converter.py  on_paste_converter.py
media_converter/media_deduplication/: anki_collection_op.py  deduplication.py
media_converter/utils/: config_types.py  converter_interfaces.py  file_paths_factory.py  mime_helper.py  show_options.py  temp_file.py
media_converter/widgets/: audio_settings_widget.py  audio_slider_box.py  behavior_settings_widget.py  bulk_convert_dialog.py  bulk_convert_settings_widget.py  image_settings_widget.py  image_slider_box.py  main_settings_dialog.py  presets_editor.py  rich_slider.py  scale_settings_widget.py  settings_dialog_base.py
playground/: no_anki_config.py  run_bulk_convert_dialog.py  run_bulk_convert_result.py  run_deduplication_confirm_dialog.py  run_main_settings_dialog.py  run_media_deduplication.py  run_media_rename_dialog.py  run_paste_image_dialog.py
scripts/: format.sh  libwebp-dl.sh  package.sh
tests/: conftest.py  test_bulk_convert.py  test_common.py  test_config.py  test_converters.py  test_deduplication.py  test_media_rename.py  test_tempfile.py
utils/: __init__.py  bulkconvert.py  checkable_combobox.py  converter_interfaces.py  file_paths_factory.py  gui.py  image_converter.py  imagehelper.py  mime_helper.py  show_options.py  temp_file.py  tempfile.py  webp.py
widgets/: __init__.py  checkable_combobox.py  field_selector.py  image_slider_box.py  presets_editor.py  rich_slider.py
