[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling>=1.24",
  "hatch-vcs>=0.4",
]

[project]
name = "media-converter"
dynamic = ["version"]
description = "An Anki add-on that makes your images small."
readme = "README.md"
requires-python = "~=3.9" # anki officially only runs on 3.9
license = { file = "LICENSE" }
keywords = ["ajatt"]
authors = [
  { name = "Ajatt-Tools and contributors" },
  { name = "Ren Tatsumoto", email = "tatsu@autistici.org" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Ajatt-Tools/PasteImagesAsWebP"
Issues = "https://github.com/Ajatt-Tools/PasteImagesAsWebP/issues"
Source = "https://github.com/Ajatt-Tools/PasteImagesAsWebP"

[tool.hatch.version]
source = "vcs"
path = "media_converter/__about__.py"

[tool.hatch.build.hooks.vcs]
version-file = "media_converter/__about__.py"

[tool.hatch.envs.dev]
dependencies = [
  "mypy>=1.0.0",
  "isort",
  "pytest",
  "aqt[qt6]",
  "pyupgrade",
]
python = "3.9"

[tool.hatch.envs.dev.scripts]
# run as `hatch run dev:scriptname`
check = "mypy --install-types --non-interactive {args:media_converter tests}"
test = "pytest"
testv = "pytest -vvv -s"
format = "bash \"$(git rev-parse --show-toplevel)/scripts/format.sh\" "
package = "bash \"$(git rev-parse --show-toplevel)/scripts/package.sh\" "

[tool.coverage.run]
source_pkgs = ["media_converter", "tests"]
branch = true
parallel = true
omit = [
  "media_converter/__about__.py",
]

[tool.coverage.paths]
media_converter = ["media_converter", "*/media_converter/media_converter"]
tests = ["tests", "*/media_converter/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = ['py39']
unstable = true

[tool.isort]
profile = "black"
